--- a/project3.0/index.html
+++ b/project3.0/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div>
             <h2>Works</h2>
         </div>
