--- a/project3.0/index.html
+++ b/project3.0/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header class="header">
-        <div>
-            <h2>Works</h2>
-        </div>
-        <div>
-            <h2>Blog</h2>
-        </div>
-        <div>
-            <h2>Contact</h2>
+        <div class="container">
+            <div class="header-wrapper">
+                <ul>
+                    <li><a href="">Works</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </header>
-    <section>
-        <div>
-            <h1>
-                Hi, I am John,<br>Creative Technologist
-            </h1>
-            <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-        </div>
-        <div>
-            <img src="img/Ellipse 1.png" alt="foto">
-        </div>
-        <div>
-            <button>Download Resume</button>
+    <section class="section-name">
+        <div class="container">
+            <div class="section-name-wrapper">
+                <h1>
+                    Hi, I am John,<br>Creative Technologist
+                </h1>
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </div>
+            <div>
+                <img src="img/Ellipse 1.png" alt="foto">
+            </div>
+            <div>
+                <button>Download Resume</button>
+            </div>
         </div>
     </section>
     <section>
@@ -40,7 +45,8 @@
 
     </section>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
