--- a/project3.0/index.html
+++ b/project3.0/index.html
@@ -19,9 +19,9 @@
             </div>
         </div>
     </header>
-    <section class="section-name">
+    <section class="section-info">
         <div class="container">
-            <div class="section-name-wrapper">
+            <div class="section-info-wrapper">
                 <h1>
                     Hi, I am John,<br>Creative Technologist
                 </h1>
@@ -29,12 +29,12 @@
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                 </p>
-            </div>
-            <div>
-                <img src="img/Ellipse 1.png" alt="foto">
-            </div>
-            <div>
-                <button>Download Resume</button>
+                <div>
+                    <img src="img/Ellipse 1.png" alt="foto">
+                </div>
+                <div>
+                    <button>Download Resume</button>
+                </div>
             </div>
         </div>
     </section>
