--- a/project3.0/index.html
+++ b/project3.0/index.html
@@ -38,14 +38,73 @@
             </div>
         </div>
     </section>
-    <section>
-
+    <section class="section-posts">
+        <div class="container">
+            <div class="section-posts-wrapper">
+                <div class="bloс1">
+                    <h2>
+                        Making a design system from scratch
+                    </h2>
+                    <P>12 Feb 2020</P>
+                    <p>Design, Pattern</p>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>
+                <div class="bloc2">
+                    <h2>Creating pixel perfect icons in Figma</h2>
+                    <p>12 Feb 2020</p>
+                    <p>Figma, Icon Design</p>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>
+            </div>
+        </div>
     </section>
-    <section>
-
+    <section class="section-works">
+        <div class="container">
+            <div class="section-works-wrapper">
+                <div class="title-works">
+                    <h2>Featured works</h2>
+                </div>
+                <div class="works">
+                    <img src="img/Rectangle 30.jpg" alt="img1">
+                    <h2>Designing Dashboards</h2>
+                    <p>2020</p>
+                    <p>Dashboard</p>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>
+                <div class="works">
+                    <img src="img/Rectangle 32.jpg" alt="img2">
+                    <h2>Vibrant Portraits of 2020</h2>
+                    <p>2018</p>
+                    <p>Illustration</p>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>
+                <div class="works">
+                    <img src="img/Rectangle 34.jpg" alt="img3">
+                    <h2>36 Days of Malayalam type</h2>
+                    <p>2018</p>
+                    <p>Typography</p>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>
+            </div>
+        </div>
     </section>
-    <footer>
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-social">
+                <a href=""><img src="img/fb.svg" alt="fb"></a>
+                <a href=""><img src="img/insta.svg" alt="insta"></a>
+                <a href=""><img src="img/Group.svg" alt="Group"></a>
+                <a href=""><img src="img/Linkedin.svg" alt="Linkedin"></a>
+            </div>
+            <div class="footer-copyright">
+                <p>Copyright ©2020 All rights reserved</p>
+            </div>
+        </div>
     </footer>
 </body>
 
