--- a/project3.0/index.html
+++ b/project3.0/index.html
@@ -30,7 +30,7 @@
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                 </p>
                 <div>
-                    <img src="img/Ellipse 1.png" alt="foto">
+                    <img src="img/foto.png" alt="foto">
                 </div>
                 <div>
                     <button>Download Resume</button>
@@ -50,7 +50,7 @@
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
                         duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 </div>
-                <div class="post-item.right">
+                <div class="post-item right">
                     <h2>Creating pixel perfect icons in Figma</h2>
                     <p>12 Feb 2020</p>
                     <p>Figma, Icon Design</p>
@@ -67,7 +67,7 @@
                     <h2>Featured works</h2>
                 </div>
                 <div class="works">
-                    <img src="img/Rectangle 30.jpg" alt="img1">
+                    <img src="img/poster.jpg" alt="img1">
                     <h2>Designing Dashboards</h2>
                     <p>2020</p>
                     <p>Dashboard</p>
@@ -75,7 +75,7 @@
                         duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 </div>
                 <div class="works">
-                    <img src="img/Rectangle 32.jpg" alt="img2">
+                    <img src="img/poster2.jpg" alt="img2">
                     <h2>Vibrant Portraits of 2020</h2>
                     <p>2018</p>
                     <p>Illustration</p>
@@ -83,7 +83,7 @@
                         duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 </div>
                 <div class="works">
-                    <img src="img/Rectangle 34.jpg" alt="img3">
+                    <img src="img/poster3.jpg" alt="img3">
                     <h2>36 Days of Malayalam type</h2>
                     <p>2018</p>
                     <p>Typography</p>
