--- a/project3.0/index.html
+++ b/project3.0/index.html
@@ -96,9 +96,9 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-social">
-                <a href=""><img src="img/fb.svg" alt="fb"></a>
-                <a href=""><img src="img/insta.svg" alt="insta"></a>
-                <a href=""><img src="img/Group.svg" alt="Group"></a>
+                <a href=""><img src="img/facebook.svg" alt="fb"></a>
+                <a href=""><img src="img/instagram.svg" alt="insta"></a>
+                <a href=""><img src="img/Twitter.svg" alt="Group"></a>
                 <a href=""><img src="img/Linkedin.svg" alt="Linkedin"></a>
             </div>
             <div class="footer-copyright">
