--- a/project3.0/Blog.html
+++ b/project3.0/Blog.html
@@ -29,7 +29,7 @@
         </div>
     </header>
     <section class="section-blog" id="content">
-        <div class="blog-container">
+        <div class="container-blog">
             <div class="section-blog-wrapper">
                 <div class="title-blog">
                     <h1>Blog</h1>
