--- a/project3.0/Blog.html
+++ b/project3.0/Blog.html
@@ -29,8 +29,7 @@
         </div>
     </header>
     <section class="section-blog" id="content">
-        <div class="container">
-            <div class="container-blog">
+            <div class="container container-blog">
                 <div class="section-blog-wrapper">
                     <div class="title-blog">
                         <h1>Blog</h1>
@@ -111,7 +110,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <footer class="footer">
         <div class="container">
