--- a/project3.0/Blog.html
+++ b/project3.0/Blog.html
@@ -21,95 +21,95 @@
                     <div></div>
                 </div>
                 <ul class="menu" id="menu">
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="work-inner.html">Works</a></li>
+                    <li><a href="Blog.html">Blog</a></li>
+                    <li><a href="index.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <section class="section-blog" id="content">
-            <div class="container container-blog">
-                <div class="section-blog-wrapper">
-                    <div class="title-blog">
-                        <h1>Blog</h1>
+        <div class="container container-blog">
+            <div class="section-blog-wrapper">
+                <div class="title-blog">
+                    <h1>Blog</h1>
+                </div>
+                <div class="blog-item-list">
+                    <div class="blog">
+                        <a href="#">UI Interactions of the week</a>
+                        <div class="blog-time">
+                            <h5>
+                                12 Feb 2019
+                            </h5>
+                            <span class="line-v">
+                            </span>
+                            <h3>
+                                Express, Handlebars
+                            </h3>
+                        </div>
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
                     </div>
-                    <div class="blog-item-list">
-                        <div class="blog">
-                            <a href="#">UI Interactions of the week</a>
-                            <div class="blog-time">
-                                <h5>
-                                    12 Feb 2019
-                                </h5>
-                                <span class="line-v">
-                                </span>
-                                <h3>
-                                    Express, Handlebars
-                                </h3>
-                            </div>
-                            <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-                            </p>
+                    <div class="line-h"></div>
+                    <div class="blog">
+                        <a href="#">UI Interactions of the week</a>
+                        <div class="blog-time">
+                            <h5>
+                                12 Feb 2019
+                            </h5>
+                            <span class="line-v">
+                            </span>
+                            <h3>
+                                Express, Handlebars
+                            </h3>
                         </div>
-                        <div class="line-h"></div>
-                        <div class="blog">
-                            <a href="#">UI Interactions of the week</a>
-                            <div class="blog-time">
-                                <h5>
-                                    12 Feb 2019
-                                </h5>
-                                <span class="line-v">
-                                </span>
-                                <h3>
-                                    Express, Handlebars
-                                </h3>
-                            </div>
-                            <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-                            </p>
-                        </div>
-                        <div class="line-h"></div>
-                        <div class="blog">
-                            <a href="#">UI Interactions of the week</a>
-                            <div class="blog-time">
-                                <h5>
-                                    12 Feb 2019
-                                </h5>
-                                <span class="line-v">
-                                </span>
-                                <h3>
-                                    Express, Handlebars
-                                </h3>
-                            </div>
-                            <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-                            </p>
-                        </div>
-                        <div class="line-h"></div>
-                        <div class="blog">
-                            <a href="#">UI Interactions of the week</a>
-                            <div class="blog-time">
-                                <h5>
-                                    12 Feb 2019
-                                </h5>
-                                <span class="line-v">
-                                </span>
-                                <h3>
-                                    Express, Handlebars
-                                </h3>
-                            </div>
-                            <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-                            </p>
-                        </div>
-                        <div class="line-h"></div>
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
                     </div>
+                    <div class="line-h"></div>
+                    <div class="blog">
+                        <a href="#">UI Interactions of the week</a>
+                        <div class="blog-time">
+                            <h5>
+                                12 Feb 2019
+                            </h5>
+                            <span class="line-v">
+                            </span>
+                            <h3>
+                                Express, Handlebars
+                            </h3>
+                        </div>
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
+                    </div>
+                    <div class="line-h"></div>
+                    <div class="blog">
+                        <a href="#">UI Interactions of the week</a>
+                        <div class="blog-time">
+                            <h5>
+                                12 Feb 2019
+                            </h5>
+                            <span class="line-v">
+                            </span>
+                            <h3>
+                                Express, Handlebars
+                            </h3>
+                        </div>
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
+                    </div>
+                    <div class="line-h"></div>
                 </div>
             </div>
+        </div>
     </section>
     <footer class="footer">
         <div class="container">
