--- a/project3.0/index.html
+++ b/project3.0/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <ul class="menu" id="menu">
                     <li><a href="#">Works</a></li>
-                    <li><a href="Blog.html">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
