--- a/project3.0/Work.html
+++ b/project3.0/Work.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <a href="#">Designing Dashboards</a>
+                        <h3><a href="#">Designing Dashboards</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2020</h5>
                             <h4 class="works-type">Dashboard</h4>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <a href="#">Vibrant Portraits of 2020</a>
+                        <h3><a href="#">Vibrant Portraits of 2020</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2018</h5>
                             <h4 class="works-type">Illustration</h4>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <a href="#">36 Days of Malayalam type</a>
+                        <h3><a href="#">36 Days of Malayalam type</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2018</h5>
                             <h4 class="works-type">Typography</h4>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <a href="#">Components</a>
+                        <h3><a href="#">Components</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2018</h5>
                             <h4 class="works-type">Components, Design</h4>
