--- a/project3.0/Blog.html
+++ b/project3.0/Blog.html
@@ -21,8 +21,8 @@
                     <div></div>
                 </div>
                 <ul class="menu" id="menu">
-                    <li><a href="Work.html">Works</a></li>
-                    <li><a href="Blog.html">Blog</a></li>
+                    <li><a href="work.html">Works</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="index.html">Contact</a></li>
                 </ul>
             </div>
