--- a/project3.0/work-inner.html
+++ b/project3.0/work-inner.html
@@ -52,6 +52,8 @@
                     </p>
                     <div class="inner-img">
                         <img src="img/image car.png" alt="red car">
+                    </div>
+                    <div class="inner-img">
                         <img src="img/order.png" alt="order confirmation">
                     </div>
                 </div>
