edit blog-time page

--- a/project3.0/blog.html
+++ b/project3.0/blog.html
@@ -120,7 +120,7 @@
                 <a href="#"><img src="img/Linkedin.svg" alt="Linkedin Logo"></a>
             </div>
             <div class="footer-copyright">
-                <p>Copyright &cop2020 All rights reserved</p>
+                <p>Copyright &copy;2020 All rights reserved</p>
             </div>
         </div>
     </footer>
