--- a/project3.0/work.html
+++ b/project3.0/work.html
@@ -22,7 +22,7 @@
                 </div>
                 <ul class="menu" id="menu">
                     <li><a href="work.html">Works</a></li>
-                    <li><a href="Blog.html">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="index.html">Contact</a></li>
                 </ul>
             </div>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <h3><a href="#">Designing Dashboards</a></h3>
+                        <h3><a href="work-inner.html">Designing Dashboards</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2020</h5>
                             <h4 class="works-type">Dashboard</h4>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <h3><a href="#">Vibrant Portraits of 2020</a></h3>
+                        <h3><a href="work-inner.html">Vibrant Portraits of 2020</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2018</h5>
                             <h4 class="works-type">Illustration</h4>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <h3><a href="#">36 Days of Malayalam type</a></h3>
+                        <h3><a href="work-inner.html">36 Days of Malayalam type</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2018</h5>
                             <h4 class="works-type">Typography</h4>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="works">
-                        <h3><a href="#">Components</a></h3>
+                        <h3><a href="work-inner.html">Components</a></h3>
                         <div class="works-date-item">
                             <h5 class="works-date">2018</h5>
                             <h4 class="works-type">Components, Design</h4>
@@ -116,7 +116,7 @@
                 <a href="#"><img src="img/Linkedin.svg" alt="Linkedin Logo"></a>
             </div>
             <div class="footer-copyright">
-                <p>Copyright &cop2020 All rights reserved</p>
+                <p>Copyright &copy;2020 All rights reserved</p>
             </div>
         </div>
     </footer>
