full edit 1 img

--- a/Crypto landing page copy/index.html
+++ b/Crypto landing page copy/index.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypton</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="container">
             <div class="header-wrapper">
-                <div class="left-blok">
+                <div class="left-block">
                     <div class="header-img">
-                        <img src="img/logo_Group.png" alt="group logo">
+                        <img src="img/logo-group.png" alt="group logo">
                     </div>
                     <h2 class="header-title">
                         Crypton
                     </h2>
                 </div>
-                <div class="right-blok">
+                <div class="right-block">
                     <ul class="menu" id="menu">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -44,7 +44,7 @@
             <div class="container-fluid">
                 <div class="elips">
                     <div class="elips-img">
-                        <img src="img/Ellipse 172.png" alt="ellipse">
+                        <img src="img/ellipse.png" alt="ellipse">
                     </div>
                     <h1>Live And<br>
                         on-demand
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="section1-img">
-                    <img src="img/Group 39896.png" alt="foto iPhone 12">
+                    <img src="img/iphone.png" alt="Photo of the iPhone 12">
                 </div>
             </div>
         </div>
@@ -78,13 +78,13 @@
                         <a href="#"><img src="img/logipsum.png" alt="logo logipsum"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/Alterbone.png" alt="logo Alterbone"></a>
+                        <a href="#"><img src="img/alterbone.png" alt="logo Alterbone"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/Ridoria.png" alt="logo Ridoria"></a>
+                        <a href="#"><img src="img/ridoria.png" alt="logo Ridoria"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/Tinygone.png" alt="logo Tinygone"></a>
+                        <a href="#"><img src="img/tinygone.png" alt="logo Tinygone"></a>
                     </li>
                 </ul>
             </div>
@@ -150,10 +150,10 @@
         <div class="section4-item-container">
             <div class="section4-left-item">
                 <div class="section4-left-item-elips">
-                    <img src="img/Ellipse2.png" alt="ellipse">
+                    <img src="img/ellipse.png" alt="ellipse">
                 </div>
                 <div class="section4-left-item-iphone">
-                    <img src="img/iPhone 12.png" alt="photo iPhone">
+                    <img src="img/iphone-section4.png" alt="photo iPhone">
                 </div>
             </div>
             <div class="section4-right-item">
@@ -167,7 +167,7 @@
                 </div>
                 <div class="section4-right-item-post">
                     <h3>
-                        <img src="img/star-05.png" alt="logo star">budgeting intervals
+                        <img src="img/star-icon.png" alt="logo star">budgeting intervals
                     </h3>
                     <p>
                         Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
@@ -176,7 +176,7 @@
                 </div>
                 <div class="section4-right-item-post">
                     <h3>
-                        <img src="img/cube-02.png" alt="logo cube">budgeting intervals
+                        <img src="img/cube-icon.png" alt="logo cube">budgeting intervals
                     </h3>
                     <p>
                         Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
@@ -185,7 +185,7 @@
                 </div>
                 <div class="section4-right-item-post">
                     <h3>
-                        <img src="img/cube-04.png" alt="logo cube">budgeting intervals
+                        <img src="img/cube-icon2.png" alt="logo cube">budgeting intervals
                     </h3>
                     <p>
                         Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
@@ -210,7 +210,7 @@
                 </div>
                 <div class="section5-item-right">
                     <div class="section5-item-right-ellipse">
-                        <img src="img/Ellipse2.png" alt="ellipse">
+                        <img src="img/ellipse.png" alt="ellipse">
                     </div>
                     <div class="section5-item-right-screenshot">
                         <img src="img/screenshot.png" alt="screenshot">
@@ -299,10 +299,10 @@
         <div class="section7-item-container">
             <div class="section7-left-item">
                 <div class="section7-left-item-elips">
-                    <img src="img/Ellipse2.png" alt="ellips-img">
+                    <img src="img/ellipse.png" alt="ellips-img">
                 </div>
                 <div class="section7-left-item-iphone">
-                    <img src="img/iphone_section7.png" alt="iPhone foto">
+                    <img src="img/iphone-section7.png" alt="iPhone foto">
                 </div>
             </div>
             <div class="section7-right-item">
@@ -334,12 +334,12 @@
             </div>
             <div class="section8-item2">
                 <div class="section8-item2-photo">
-                    <img src="img/section8_foto1.svg" alt="photo of a gray-haired man">
-                    <img src="img/section8_foto2.svg" alt="photo of a woman with black hair">
-                    <img src="img/section8_foto3.svg" alt="photo of a woman with red hair">
+                    <img src="img/section8-foto1.jpg" alt="photo of a gray-haired man">
+                    <img src="img/section8-foto2.jpg" alt="photo of a woman with black hair">
+                    <img src="img/section8-foto3.jpg" alt="photo of a woman with red hair">
                 </div>
                 <div class="section8-item2-ellipse">
-                    <img src="img/Ellipse2.png" alt="ellipse">
+                    <img src="img/ellipse.png" alt="ellipse">
                 </div>
             </div>
         </div>
@@ -462,14 +462,14 @@
                     <div class="footer-item2-wrapper">
                         <div class="footer-item2-left-block">
                             <p>
-                                &copy;2077 Untitled UI. All rights reserved.
+                                &copy; 2077 Untitled UI. All rights reserved.
                             </p>
                         </div>
                         <div class="footer-item2-right-block">
-                            <a href="#"><img src="img/Twitter-icon.png" alt="Twitter icon"></a>
+                            <a href="#"><img src="img/twitter-icon.png" alt="Twitter icon"></a>
                             <a href="#"><img src="img/linkedin-icon.png" alt="linkedin icon"></a>
                             <a href="#"><img src="img/facebook-icon.png" alt="facebook icon"></a>
-                            <a href="#"><img src="img/GitHub-icon.png" alt="GitHub icon"></a>
+                            <a href="#"><img src="img/github-icon.png" alt="GitHub icon"></a>
                             <a href="#"><img src="img/uncertain-icon.png" alt="uncertain icon"></a>
                             <a href="#"><img src="img/dribbble-icon.png" alt="dribbble icon"></a>
                         </div>
