--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -93,7 +93,7 @@
     <section class="section3">
         <div class="container">
             <div class="section3-wrapper">
-                <div class="section3-post">
+                <div class="section3-header">
                     <h2>
                         Automated portfolio tracking
                     </h2>
