full edit section 4-9

--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -149,17 +149,17 @@
             </div>
             <div class="section4-right-item">
                 <div class="section4-right-item-title">
-                    <h1>
-                        features
-                    </h1>
                     <h2>
-                        Crypto premium
+                        features
                     </h2>
+                    <h3>
+                        Crypto premium
+                    </h3>
                 </div>
                 <div class="section4-right-item-post">
-                    <h3>
+                    <h5>
                         <img src="img/star-icon.png" alt="logo star">budgeting intervals
-                    </h3>
+                    </h5>
                     <p>
                         Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
                         ipsa sint ut voluptatum labore et.
@@ -190,9 +190,9 @@
         <div class="container">
             <div class="section5-wrapper">
                 <div class="section5-item-left">
-                    <h1>
+                    <h2>
                         Invite team members & enlarge your groups
-                    </h1>
+                    </h2>
                     <p>
                         Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
                         ipsa sint ut voluptatum labore et possimus voluptas.
@@ -214,9 +214,9 @@
         <div class="container">
             <div class="section6-wrapper">
                 <div class="section6-title">
-                    <h1>
+                    <h2>
                         Make every step user-centric
-                    </h1>
+                    </h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipis elit
                     </p>
@@ -224,9 +224,9 @@
                 <div class="section6-item">
                     <div class="section6-item-block">
                         <img src="img/headphones-icon.png" alt="headphones icon">
-                        <h1>
+                        <h3>
                             Support
-                        </h1>
+                        </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipis elit. Sit enim nec, proin faucibus nibh et
                             sagittis a. Lacinia purus ac amet.
@@ -297,12 +297,12 @@
                 </div>
             </div>
             <div class="section7-right-item">
-                <h1>
-                    How it works
-                </h1>
                 <h2>
-                    Viewing long- term and short -term forcast
+                    How it works
                 </h2>
+                <h3>
+                    Viewing long- term and short -term forcast
+                </h3>
                 <p>
                     Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
                     ipsa sint ut voluptatum labore et possimus voluptas.
@@ -316,7 +316,9 @@
         <div class="container">
             <div class="section8-item1">
                 <div class="section8-title">
-                    <h1>Testimonials</h1>
+                    <h2>
+                        Testimonials
+                    </h2>
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed ipsa
@@ -338,18 +340,18 @@
     <section class="section9">
         <div class="container">
             <div class="section9-item1">
-                <h1>
-                    About us
-                </h1>
                 <h2>
-                    We’re a distributed team
+                    About us
                 </h2>
+                <h3>
+                    We’re a distributed team
+                </h3>
                 <p>
                     We have offices and teams all around the world.
                 </p>
             </div>
             <div class="section9-item2">
-                <img src="img/world-map.png" alt="">
+                <img src="img/world-map.png" alt="world map">
             </div>
         </div>
     </section>
@@ -358,9 +360,9 @@
             <div class="footer-item1">
                 <div class="footer-item1-container">
                     <div class="footer-item1-block1">
-                        <h1>
+                        <h5>
                             Product
-                        </h1>
+                        </h5>
                         <ul>
                             <li><a href="#">Overview</a></li>
                             <li><a href="#">Features</a></li>
@@ -373,9 +375,9 @@
                         </ul>
                     </div>
                     <div class="footer-item1-block2">
-                        <h1>
+                        <h5>
                             Company
-                        </h1>
+                        </h5>
                         <ul>
                             <li>
                                 <a href="#">About us</a>
@@ -398,9 +400,9 @@
                         </ul>
                     </div>
                     <div class="footer-item1-block3">
-                        <h1>
+                        <h5>
                             Resources
-                        </h1>
+                        </h5>
                         <ul>
                             <li>
                                 <a href="#">Blog</a>
@@ -423,9 +425,9 @@
                         </ul>
                     </div>
                     <div class="footer-item1-block3">
-                        <h1>
+                        <h5>
                             Social
-                        </h1>
+                        </h5>
                         <ul>
                             <li>
                                 <a href="#">Twitter</a>
@@ -450,21 +452,21 @@
                 </div>
             </div>
             <div class="footer-item2">
-                    <div class="footer-item2-wrapper">
-                        <div class="footer-item2-left-block">
-                            <p>
-                                &copy; 2077 Untitled UI. All rights reserved.
-                            </p>
-                        </div>
-                        <div class="footer-item2-right-block">
-                            <a href="#"><img src="img/twitter-icon.png" alt="Twitter icon"></a>
-                            <a href="#"><img src="img/linkedin-icon.png" alt="linkedin icon"></a>
-                            <a href="#"><img src="img/facebook-icon.png" alt="facebook icon"></a>
-                            <a href="#"><img src="img/github-icon.png" alt="GitHub icon"></a>
-                            <a href="#"><img src="img/uncertain-icon.png" alt="uncertain icon"></a>
-                            <a href="#"><img src="img/dribbble-icon.png" alt="dribbble icon"></a>
-                        </div>
+                <div class="footer-item2-wrapper">
+                    <div class="footer-item2-left-block">
+                        <p>
+                            &copy; 2025 Untitled UI. All rights reserved.
+                        </p>
                     </div>
+                    <div class="footer-item2-right-block">
+                        <a href="#"><img src="img/twitter-icon.png" alt="Twitter icon"></a>
+                        <a href="#"><img src="img/linkedin-icon.png" alt="linkedin icon"></a>
+                        <a href="#"><img src="img/facebook-icon.png" alt="facebook icon"></a>
+                        <a href="#"><img src="img/github-icon.png" alt="GitHub icon"></a>
+                        <a href="#"><img src="img/uncertain-icon.png" alt="uncertain icon"></a>
+                        <a href="#"><img src="img/dribbble-icon.png" alt="dribbble icon"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
